--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,24 @@
 [versions]
-agp = "8.7.3"
-kotlin = "2.0.0"
-coreKtx = "1.15.0"
+# ✅ СТАБИЛЬНЫЕ ВЕРСИИ (проверенные в production)
+agp = "8.7.0"
+kotlin = "1.9.24"
+coreKtx = "1.12.0"
 junit = "4.13.2"
-espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.7"
-navigationCompose = "2.7.3"
-activityCompose = "1.9.3"
-composeBom = "2024.12.01"
-osmdroid = "6.1.15"
-okhttp = "4.10.0"
-playServicesLocation = "21.3.0"
-constraintlayout = "2.2.0"
-constraintlayoutCompose = "1.1.0"
-foundation = "1.7.6"
-material3 = "1.3.1"
-material = "1.9.0"
+espressoCore = "3.5.1"
+lifecycleRuntimeKtx = "2.7.0"
+navigationCompose = "2.7.7"
+activityCompose = "1.8.2"
+composeBom = "2024.06.00"
+osmdroid = "6.1.17"
+okhttp = "4.12.0"
+constraintlayout = "2.1.4"
+constraintlayoutCompose = "1.0.1"
+foundation = "1.6.7"
+material3 = "1.2.1"
+material = "1.11.0"
+
+# Google Play Services
+playServicesLocation = "21.2.0"
 
 [libraries]
 # Core
@@ -52,7 +55,7 @@ logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-intercep
 
 # Testing
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version = "1.2.1" }
+androidx-junit = { group = "androidx.test.ext", name = "junit", version = "1.1.5" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 
 # Debugging tools
@@ -63,5 +66,4 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
+# ❌ УБРАН kotlin-compose plugin (недоступен в Kotlin 1.9.24)
