--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# ????????? keystore ??? ??????? release\
+DELIVERY_BAG_KEYSTORE_FILE=../keys/delivery-bag-keystore.jks
+DELIVERY_BAG_KEYSTORE_PASSWORD=8rz#R7U&aefJMtrn
+DELIVERY_BAG_KEY_ALIAS=delivery-bag
+DELIVERY_BAG_KEY_PASSWORD=8rz#R7U&aefJMtrn
